<resources>
    <string name="app_name">live</string>
    <string name="default_search">搜索电视/电视剧/电影</string>
    <string name="tv">电视</string>
    <string name="search">搜索</string>
    <string name="history">历史记录</string>
    <string name="hot">热点</string>
    <string name="live">直播</string>
    <string name="home">首页</string>
    <string name="hit_recommend">热播推荐</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="more">更多</string>
    <string name="next">换一批</string>
    <string name="nice">好看</string>
    <string name="today_hot_list">今日节目热榜</string>
    <string name="show_name">节目名称</string>
    <string name="my_gold">我的金币</string>
    <string name="gold_expire">您有金币即将过期</string>
    <string name="remote_control">遥控</string>
    <string name="my">我的</string>
    <string name="programme">节目单</string>
    <string name="related">相关</string>
    <string name="collection">已收藏</string>
    <string name="uncollection">收藏</string>
    <string name="selection">选集</string>
    <string name="details">详情</string>
    <string-array name="tabs">
        <item>推荐</item>
        <item>电视剧</item>
        <item>电影</item>
        <item>热播</item>
        <item>经典剧</item>
        <item>电台</item>
        <item>综艺</item>
        <item>少儿</item>
        <item>动漫</item>
        <item>短视频</item>
        <item>明星</item>
        <item>音乐</item>
        <item>体育</item>
        <item>财经</item>
        <item>曲艺</item>
        <item>数字</item>
        <item>纪录片</item>
        <item>电竞</item>
        <item>自建</item>
    </string-array>
    <string-array name="live_tabs">
        <item>推荐</item>
        <item>央视</item>
        <item>卫视</item>
        <item>地方台</item>
        <item>特色</item>
        <item>湖南</item>
    </string-array>
    <string-array name="hot_tabs">
        <item>影视</item>
        <item>视频</item>
        <item>综艺</item>
        <item>美女</item>
        <item>军事</item>
        <item>体育</item>
        <item>科技</item>
    </string-array>
</resources>
