<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.live.widget.PlayView
        android:id="@+id/play_pv"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
    <FrameLayout
        android:visibility="gone"
        android:id="@+id/play_live_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/color16"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/play_live_programme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/color1"
                    android:text="@string/programme"
                    android:textSize="@dimen/sp18" />
                <View
                    android:layout_width="17dp"
                    android:layout_height="3dp"
                    android:id="@+id/play_live_programme_line"
                    android:layout_gravity="center_horizontal|bottom"
                    android:background="@color/color1"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:textColor="@color/color15"
                    android:id="@+id/play_live_related"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="3dp"
                    android:gravity="center"
                    android:text="@string/related"
                    android:textSize="@dimen/sp18" />
                <View
                    android:layout_width="17dp"
                    android:layout_height="3dp"
                    android:visibility="gone"
                    android:id="@+id/play_live_related_line"
                    android:layout_gravity="center_horizontal|bottom"
                    android:background="@color/color1"/>
            </FrameLayout>
        </LinearLayout>

        <com.base.widget.RecyclerView
            android:id="@+id/play_live_programme_time"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginTop="52dp"
            android:background="@color/color14" />

        <com.base.widget.RecyclerView
            android:id="@+id/play_live_programme_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="52dp"
            android:background="@color/color13" />
        <com.base.widget.RecyclerView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginTop="52dp"
            android:id="@+id/play_live_related_rv"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_height="match_parent"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color13"
        android:id="@+id/play_teleplay_parent">
            <TextView
                android:id="@+id/play_teleplay_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:textSize="@dimen/sp16"
                android:text="@string/next"
              android:textColor="@color/color18"
              android:layout_marginLeft="13dp"/>
        <ImageView
            android:src="@mipmap/collection"
            android:layout_width="21dp"
            android:layout_height="20dp"
            android:id="@+id/play_teleplay_iv"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"/>
        <TextView
            android:id="@+id/play_teleplay_collection"
            android:textSize="@dimen/sp12"
            android:layout_marginRight="15dp"
            android:layout_marginTop="36dp"
            android:text="@string/collection"
            android:textColor="@color/color3"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="62dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/color11"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp16"
            android:textColor="@color/color18"
            android:text="@string/selection"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="73dp"/>
        <TextView
            android:id="@+id/play_teleplay_details"
            android:layout_width="wrap_content"
            android:padding="7dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_gravity="right"
            android:textSize="@dimen/sp12"
            android:text="@string/details"
            android:textColor="@color/color3"
            android:layout_marginRight="5dp"/>
        <com.base.widget.RecyclerView
            android:id="@+id/play_teleplay_select_rv"
            android:layout_width="match_parent"
            android:layout_marginTop="97dp"
            app:direction="horizontal"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="156dp"
            android:background="@color/color11"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="181dp"
            android:textSize="@dimen/sp16"
            android:textColor="@color/color2"
            android:text="@string/hot_recommend"
            android:layout_marginLeft="14dp"/>
        <com.base.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="206dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:id="@+id/play_teleplay_hot_rv"/>
    </FrameLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:background="@color/color13"
    android:id="@+id/play_hot_parent"
    android:visibility="gone"
    android:layout_height="match_parent">
<TextView
    android:id="@+id/play_hot_title"
    android:layout_width="305dp"
    android:layout_height="wrap_content"
    android:textSize="@dimen/sp16"
    android:textColor="@color/color18"
    android:layout_marginLeft="13dp"
    android:layout_marginTop="13dp"
    android:text="@string/next"
    android:maxLines="2"
    android:enabled="true"
    android:ellipsize="end"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:src="@mipmap/collection"
        android:layout_marginTop="13dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="right"
        android:id="@+id/play_hot_iv"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="12dp"
        android:layout_marginTop="37dp"
        android:text="@string/collection"
        android:textSize="@dimen/sp14"
        android:id="@+id/play_hot_collection"
        android:textColor="@color/color3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginLeft="12dp"
        android:textSize="@dimen/sp14"
        android:id="@+id/play_hot_name"
        android:text="@string/next"
        android:textColor="@color/color3"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="90dp"
        android:background="@color/color16"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp16"
        android:text="@string/hot_recommend"
        android:layout_marginTop="114dp"
        android:layout_marginLeft="14dp"
        android:textColor="@color/color2"/>
    <com.base.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/play_hot_rv"
        android:layout_marginTop="132dp"/>
</FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color13"
        android:id="@+id/play_movie_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="13sp"
            android:textSize="@dimen/sp16"
            android:id="@+id/play_movie_title"
            android:text="@string/collection"
            android:textColor="@color/color18"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="19dp"
            android:src="@mipmap/collection"
            android:layout_marginTop="13dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="right"
            android:id="@+id/play_movie_iv"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:layout_marginTop="37dp"
            android:text="@string/collection"
            android:textSize="@dimen/sp14"
            android:id="@+id/play_movie_collection"
            android:textColor="@color/color3"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="59dp"
            android:background="@color/color16"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp16"
            android:layout_marginTop="83dp"
            android:text="@string/hot_recommend"
            android:layout_marginLeft="14dp"
            android:textColor="@color/color2"/>
        <com.base.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:id="@+id/play_movie_rv"
            android:layout_marginTop="104dp"/>
    </FrameLayout>


</LinearLayout>
